Some missing additions and adjustments were made for the frontend connection.